...
        const SizedBox(
          height: 30,
        ),
        SizedBox(
          width: 350,
          height: 40,
          key: const ValueKey('updateFormBtn'),
          child: ElevatedButton.icon(
            style: ElevatedButton.styleFrom(
              primary: Colors.green,
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(10), // <-- Radius
              ),
...
                          ),
                        ],
                      ),
                      child: Padding(
                        padding: const EdgeInsets.all(4),
                        child: TextFormField(
                          key: const ValueKey('addressText'),
                          style: const TextStyle(
                              fontSize: 18,
                              fontWeight: FontWeight.bold,
                              color: Color.fromARGB(255, 145, 142, 142)),
                          controller: _addressController,
                          decoration: const InputDecoration(
...
                      ),
                    ),
                    const SizedBox(
                      height: 20,
                    ),
                    SizedBox(
                      key: const ValueKey('updateBtn'),
                      height: 50,
                      width: double.infinity,
                      child: ElevatedButton.icon(
                        label: const Text(
                          'Update Profile',
                          style: TextStyle(
...
                                BorderRadius.circular(10), // <-- Radius
                          ),
                        ),
                        onPressed: () {
                          // _showNotification();
                          User user = User(
                            email: _emailController.text,
                            phone: _phoneController.text,
                            firstname: _firstnameController.text,
                            lastname: _lastnameController.text,
                            username: _usernameController.text,
                            gender: _genderController.text,
                            address: _addressController.text,
                          );
                          _updateProfile(user);
                          Navigator.pop(context);
                        },
...
