...
                Positioned(
                  bottom: 10,
                  right: 10,
                  child: SizedBox(
                    height: 40,
                    child: ElevatedButton.icon(
                      key: const ValueKey('cancelBookingBtn'),
                      label: const Text(
                        'Cancel booking',
                        style: TextStyle(
                          fontSize: 14,
                          fontWeight: FontWeight.w800,
                          color: Colors.white,
...
        builder: (BuildContext context) => AlertDialog(
              title: const Text('Cancel Booking'),
              content:
                  const Text('Are you sure you want to cancel this booking?'),
              actions: <Widget>[
                TextButton(
                  key: const ValueKey('yesBtn'),
                  onPressed: () {
                    _deleteBooking(bookingId, vehicleName);
                  },
                  child: const Text('Yes'),
                ),
                TextButton(
...
